--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 arch:
   - amd64
   - ppc64le
-
+before_install:
+  - sudo apt-get install -y rake
 steps:
 - script: GIT_BRANCH=$(build.SourceBranchName) make docker_build
   displayName: 'Build kubectl container'
