--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
+# ----------------------------------------------------------------------------
+#
+# Package             : k8s-kubectl
+# Source Repo         : https://github.com/lachie83/k8s-kubectl
+# Travis Job Link     : https://travis-ci.com/github/asellappen/k8s-kubectl/
+# Created travis.yml  : No
+# Maintainer          : Arumugam N S <asellappen@yahoo.com> / Priya Seth<sethp@us.ibm.com>
+#
+# Script License      : Apache License, Version 2 or later
+#
+# ----------------------------------------------------------------------------
+
 arch:
   - amd64
   - ppc64le
+  
 before_install:
   - sudo apt-get install -y rake
 steps:
