--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ services:
 scripts:
 
 - make docker_build
-- docker run --rm lachlanevenson/k8s-kubectl:``git rev-parse --abbrev-ref HEAD`` --server=http://<server-name>:8080 get pods
+- make test
+#- docker run --rm lachlanevenson/k8s-kubectl:``git rev-parse --abbrev-ref HEAD`` --server=http://<server-name>:8080 get pods
