--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@
 # Script License      : Apache License, Version 2 or later
 #
 # ----------------------------------------------------------------------------
+language: generic
 sudo: required
 arch:
   - amd64
@@ -22,4 +23,5 @@ scripts:
 
 - make docker_build
 - make test
+- mahe docker_push
 #- docker run --rm lachlanevenson/k8s-kubectl:``git rev-parse --abbrev-ref HEAD`` --server=http://<server-name>:8080 get pods
