--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ scripts:
 
 - make docker_build
 - make test
-- mahe docker_push
+- make docker_push
 #- docker run --rm lachlanevenson/k8s-kubectl:``git rev-parse --abbrev-ref HEAD`` --server=http://<server-name>:8080 get pods
